--- a/core-web/package.json
+++ b/core-web/package.json
@@ -72,7 +72,6 @@
         "@ngrx/component-store": "17.0.1",
         "@nx/angular": "18.0.4",
         "@storybook/builder-webpack5": "^8.1.1",
-        "@swc/helpers": "~0.5.2",
         "@tarekraafat/autocomplete.js": "^10.2.6",
         "@tinymce/tinymce-angular": "^7.0.0",
         "@tiptap/core": "^2.0.0-beta.218",
@@ -183,9 +182,6 @@
         "@storybook/theming": "^7.6.3",
         "@svgr/rollup": "^6.1.2",
         "@swc-node/register": "1.8.0",
-        "@swc/cli": "~0.1.62",
-        "@swc/core": "^1.3.100",
-        "@swc/jest": "0.2.20",
         "@testing-library/jest-dom": "^6.1.6",
         "@testing-library/react": "^14.0.0",
         "@testing-library/react-hooks": "^8.0.1",
@@ -277,6 +273,7 @@
         "webpack-bundle-analyzer": "^4.5.0"
     },
     "resolutions": {
+        "http-cache-semantics": "^4.1.1",
         "pdfjs-dist": "^4.2.67"
     },
     "nx": {
